--- a/Beer/Web.config
+++ b/Beer/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="BeerContext" connectionString="Server=KARENMBPWIN8\SQLEXPRESS2016;Database=Beer;User ID=sa;Password=*****;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
+    <add name="BeerContext" connectionString="Server=KARENMBPWIN8\SQLEXPRESS2016;Database=Beer;User ID=sa;Password=******;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
