--- a/Beer/Beer.csproj
+++ b/Beer/Beer.csproj
@@ -262,6 +262,7 @@
     <Content Include="Global.asax" />
     <Content Include="img\boil-icon.png" />
     <Content Include="img\bottle.png" />
+    <Content Include="img\fermentation-icon.png" />
     <Content Include="img\hop-icon-trans.png" />
     <Content Include="img\hop-icon.png" />
     <Content Include="img\malt-icon-trans.png" />
@@ -271,6 +272,7 @@
     <Content Include="img\water-icon.png" />
     <Content Include="img\yeast-icon-trans.png" />
     <Content Include="img\yeast-icon.png" />
+    <Content Include="recipe-template.html" />
     <Content Include="Scripts\app.js" />
     <Content Include="Scripts\beerStyles.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -333,6 +335,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Scripts\select2.min.js" />
     <Content Include="Views\Home\Index - Copy.cshtml" />
+    <Content Include="Views\Home\Index - Copy %282%29.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
