reorganising controllers. adding recipe done. database backup pre working on update

--- a/Beer/Beer.csproj
+++ b/Beer/Beer.csproj
@@ -195,13 +195,11 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
-    <Compile Include="Controllers\AddRecipeController.cs" />
     <Compile Include="Controllers\EbcColoursController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\HopsController.cs" />
     <Compile Include="Controllers\HopStepsController.cs" />
     <Compile Include="Controllers\MaltGenericsController.cs" />
-    <Compile Include="Controllers\MyStockController.cs" />
     <Compile Include="Controllers\OthersController.cs" />
     <Compile Include="Controllers\RecipesCorsController.cs" />
     <Compile Include="Controllers\RecipesController.cs" />
@@ -344,8 +342,8 @@
     <Content Include="Scripts\select2.min.js" />
     <Content Include="Views\Home\Index - Copy.cshtml" />
     <Content Include="Views\Home\Index - Copy %282%29.cshtml" />
-    <Content Include="Views\MyStock\Index.cshtml" />
-    <Content Include="Views\AddRecipe\Index.cshtml" />
+    <Content Include="Views\Home\MyStock.cshtml" />
+    <Content Include="Views\Home\AddEdit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
