--- a/Beer/Web.config
+++ b/Beer/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="BeerContext" connectionString="Server=KARENMBPWIN8\SQLEXPRESS2016;Database=Beer;User ID=sa;Password=*****;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
+    <add name="BeerContext" connectionString="Server=KARENMBPWIN8\SQLEXPRESS2016;Database=Beer;User ID=sa;Password=******;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -29,11 +29,13 @@
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
+      <remove name="WebDAV" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true">
       <remove name="ApplicationInsightsWebTracking" />
+        <remove name="WebDAVModule" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
   </system.webServer>
