--- a/Beer/Beer.csproj
+++ b/Beer/Beer.csproj
@@ -263,6 +263,7 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="img\batch-icon.png" />
     <Content Include="img\boil-icon.png" />
     <Content Include="img\bottle.png" />
     <Content Include="img\fermentation-icon.png" />
@@ -271,6 +272,7 @@
     <Content Include="img\malt-icon-trans.png" />
     <Content Include="img\malt-icon.png" />
     <Content Include="img\mash-icon.png" />
+    <Content Include="img\note-icon.png" />
     <Content Include="img\recipe-icon.png" />
     <Content Include="img\water-icon.png" />
     <Content Include="img\yeast-icon-trans.png" />
